--- a/myblog/package.json
+++ b/myblog/package.json
@@ -10,5 +10,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "element-ui": "^2.12.0",
+    "vue": "^2.5.17"
+  }
 }
